--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Kastle</title>
   <link rel="stylesheet" href="css/style.css" type="text/css">
   <link rel="stylesheet" href="css/swiper-bundle.min.css" type="text/css">
+  <link rel="shortcut icon" type="image/png" href="img/logo-kastle.png" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
