--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             </div>
             <div class="conteudo-learny-direita">
               <div class="txt-conteudo-learny alinha-direita margin-r-35">
-                <h2 class="titulo-conteudo-learny fonte-verde">Plano de estudos</h2>
+                <h2 class="titulo-conteudo-learny fonte-verde">Planos de Estudo</h2>
                 <p class="p-conteudo-learny">O Aplicativo conta com planos de estudos com conteúdos adaptados para cada
                   criança, visando facilitar o aprendizado.</p>
               </div>
