feat: atualizações do site

--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
       </nav>
       <div class="alinha-cabecalho">
         <div class="conteudo-cabecalho">
-          <h1 class="titulo-cabecalho">Kastle</h1>
-          <p class="legenda-cabecalho">Ajudando crianças com transtorno do espectro autista a aprender</p>
+          <h1 class="titulo-cabecalho">KASTLE</h1>
+          <p class="legenda-cabecalho">Facilitando o processo de aprendizagem para crianças diagnosticadas com transtorno do espectro autista</p>
           <a href="#sobre"><button type="button" class="btn-cabecalho"><img class="icon-btn-cabecalho"
                 src="img/icons/play.png" alt="">Navegar</button></a>
         </div>
@@ -58,22 +58,22 @@
     <section id="sobre" class="secao">
       <h1 class="titulo-secao">Sobre</h1>
       <div class="div-objetivo">
-        <p class="p-objetivo margin-r-35 alinha-direita fonte-cinza">Somos um grupo da Fatec de Registro-SP, que produz
-          softwares relacionados ao ensino para crianças.</p>
+        <p class="p-objetivo margin-r-35 alinha-direita fonte-cinza">Somos um grupo da Fatec de Registro-SP, 
+          que trabalha no desenvolvimento de soluções tecnológicas voltadas à educação infantil.</p>
         <div class="linha-objetivo-direita bg-verde"></div>
-        <img src="img/fatec.jpg" class="img-objetivo" alt="">
+        <img src="img/fatec.png" class="img-objetivo" alt="">
       </div>
       <div class="div-objetivo">
-        <img src="img/crianca.jpg" class="img-objetivo" alt="">
+        <img src="img/crianca.png" class="img-objetivo" alt="">
         <div class="linha-objetivo-esquerda bg-azul"></div>
-        <p class="p-objetivo margin-l-35 fonte-cinza">Atualmente estamos desenvolvendo um aplicativo de ensino de Inglês
-          para crianças autistas, orientado por IA.</p>
+        <p class="p-objetivo margin-l-35 fonte-cinza">Nosso atual projeto consiste em um aplicativo educacional de língua inglesa, 
+          integrando IA para personalização pedagógica no ensino de crianças com autismo.</p>
       </div>
       <div class="div-objetivo">
-        <p class="p-objetivo margin-r-35 alinha-direita fonte-cinza">Nosso objetivo principal é fazer com que as
-          crianças aprendam de forma lúdica, interativa e dinâmica.</p>
+        <p class="p-objetivo margin-r-35 alinha-direita fonte-cinza">Nosso objetivo é por meio de metodologias gamificadas e recursos interativos, 
+          promover uma assimilação de conhecimento mais engajadora e eficaz para crianças que tenham TEA.</p>
         <div class="linha-objetivo-direita bg-amarelo"></div>
-        <img src="img/crianças.jpg" class="img-objetivo" alt="">
+        <img src="img/sala.png" class="img-objetivo" alt="">
       </div>
     </section>
     <section class="secao-s-padding">
@@ -108,15 +108,16 @@
               <div class="div-celular"><div class="tela sobre" alt=""></div></div>
               <div class="txt-conteudo-learny margin-l-35">
                 <h2 class="titulo-conteudo-learny fonte-vermelho">Sobre</h2>
-                <p class="p-conteudo-learny">Learny é um aplicativo de ensino de inglês para crianças autistas,
-                  orientado por IA.</p>
+                <p class="p-conteudo-learny">Learny é um aplicativo de ensino de inglês para crianças autistas, 
+                  com um sistema de ensino gamificado com atividades interativas eficazes no ensino e 
+                  com os ajustes adequados para o uso de crianças com TEA.</p>
               </div>
             </div>
             <div class="conteudo-learny-direita">
               <div class="txt-conteudo-learny alinha-direita margin-r-35">
                 <h2 class="titulo-conteudo-learny fonte-verde">Planos de Estudo</h2>
-                <p class="p-conteudo-learny">O Aplicativo conta com planos de estudos com conteúdos adaptados para cada
-                  criança, visando facilitar o aprendizado.</p>
+                <p class="p-conteudo-learny">O Aplicativo conta com planos de estudos com conteúdos adaptáveis para cada
+                  criança, com configurações que podem ser ajustadas para o maior conforto e concentração da criança.</p>
               </div>
               <div class="div-celular-direita"><div class="tela plano" alt=""></div></div>
               <div class="quadrado bg-verde"></div>
@@ -127,13 +128,14 @@
               <div class="txt-conteudo-learny margin-l-35">
                 <h2 class="titulo-conteudo-learny fonte-azul">Atividades Diárias</h2>
                 <p class="p-conteudo-learny">São disponibilizados exercicios diariamente, para fixar os conhecimentos e
-                  manter os alunos sempre ativos.</p>
+                  manter os alunos sempre ativos, contando com reforços positivos adequados para a saúde emocional da criança.</p>
               </div>
             </div>
             <div class="conteudo-learny-direita margin-top-learny-2">
               <div class="txt-conteudo-learny alinha-direita margin-r-35">
                 <h2 class="titulo-conteudo-learny fonte-verde">Gamificação</h2>
-                <p class="p-conteudo-learny">O aplicativo possui um sistema de gamificação, onde os alunos ganham pontos e conquistas por realizarem as atividades.</p>
+                <p class="p-conteudo-learny">O aplicativo possui um sistema de gamificação, onde os alunos ganham pontos, conquistas e
+                  medalhas por realizarem as atividades, com atividades interessantes que mantém o engajamento da criança.</p>
               </div>
               <div class="div-celular-direita"><div class="tela estatisticas" alt=""></div></div>
               <div class="quadrado bg-verde"></div>
@@ -151,7 +153,6 @@
                     <div class="card-content">
                         <h2 class="nome-integrante">João</h2>
                         <div class="linha-integrante"></div>
-                        <p class="funcao-integrante">Programador Web</p>
                     </div>
                 </div>
             </div>
@@ -160,7 +161,6 @@
                   <div class="card-content">
                       <h2 class="nome-integrante">Jorge</h2>
                       <div class="linha-integrante"></div>
-                      <p class="funcao-integrante">UX/UI designer</p>
                   </div>
               </div>
             </div>
@@ -169,16 +169,14 @@
                   <div class="card-content">
                       <h2 class="nome-integrante">Guilherme</h2>
                       <div class="linha-integrante"></div>
-                      <p class="funcao-integrante">Programador Mobile</p>
                   </div>
               </div>
             </div>
             <div class="swiper-slide">
               <div class="conteudo-integrante pessoa4">
                   <div class="card-content">
-                      <h2 class="nome-integrante">Eliebert</h2>
+                      <h2 class="nome-integrante">Gabriel</h2>
                       <div class="linha-integrante"></div>
-                      <p class="funcao-integrante">Programador Mobile</p>
                   </div>
               </div>
             </div>
